tests/compile_fail/vulkan_backend_disabled.zig
const rgfw = @import("rgfw");

test "disabled Vulkan APIs explain how to enable them" {
    rgfw.Vulkan.requireEnabled();
}
